@startuml VueLogique

class ParentStore {
  - nom : String
  - adresse : String
}

class Warehouse {
  - nom : String
  - adresse : String
}

class Store {
  - nom : String
  - adresse : String
}

class Product {
  - nom : String
  - description : String
  - price : float
}

class Category {
  - name : String
}

class Stock {
  - quantity : int
}

class StockReservation {
  - reservationDate : Date
  - quantity : int
  - status : String
}

class Replenishment {
  - requestedQuantity : int
  - status : String
}

class Sale {
  - saleDate : Date
  - subTotal : float
}

class SaleLine {
  - price : float
  - quantity : int
}

class Customer {
  - firstName : String
  - lastName : String
  - email : String
  - password : String
  - phone : String
  - address : String
}

class Cart {
  - createdAt : Date
  - status : String
}

class CartItem {
  - price : float
  - quantity : int
}

class Order {
  - orderDate : Date
  - totalAmount : float
  - status : String
}

class OrderLine {
  - quantity : int
  - price : float
}

class Payment {
  - paymentDate : Date
  - amount : float
  - status : String
  - method : String
}

Category "1" -- "*" Product : contains >

ParentStore "1" -- "1" Warehouse : manages >
ParentStore "1" -- "*" Store : manages >
Warehouse "1" -- "*" Stock : stores >
Store "1" -- "*" Stock : has >

Product "1" -- "*" Stock : is stocked as >
Stock "1" -- "*" StockReservation : reserves >
Stock "1" -- "*" Replenishment : generates >

Store "1" -- "*" Sale : generates >
Sale "1" -- "*" SaleLine : contains >
Product "1" -- "*" SaleLine : sold in >

Customer "1" -- "1" Cart : owns >
Cart "1" -- "*" CartItem : contains >
CartItem "*" -- "1" Product : refers to >

Customer "1" -- "*" Order : places >
Order "1" -- "*" OrderLine : contains >
Product "1" -- "*" OrderLine : appears in >

Order "1" -- "*" StockReservation : reserves >
Order "1" -- "1" Payment : paid by >

@enduml
